:triangular_flag_on_post: Add autentication logic

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -15,11 +15,16 @@ a {
   box-sizing: border-box;
 }
 
-div {
+form {
   width: 100vw;
   height: 100vh;
 
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+input, button {
+  margin: 0.25rem;
 }
